Fix overflow bug and add animation to scroll buttons

--- a/src/components/Slides/Projects/Projects.module.scss
+++ b/src/components/Slides/Projects/Projects.module.scss
@@ -15,6 +15,7 @@
 .scrollWrapper {
   @include scalableRule(margin-top, 30);
   position: relative;
+  overflow: hidden;
 
   &::before, &::after {
     content: ' ';
@@ -65,6 +66,7 @@
     text-align: center;
     cursor: pointer;
     transition: 0.3s ease;
+    @include animated(slideInLeft, 0.5s);
 
     &:hover {
       background: rgba(114, 50, 249, 0.8);
